[package]
name = "rust-beacon-parser"
version = "0.1.0"
authors = ["plozano"]
edition = "2021"

[dependencies]
bytebuffer = "0.2.1"
env_logger = "0.9.0"
log = "0.4.6"
ctrlc = "3.1.3"
blurz = "0.4.0"
rand = "0.8.5"
uuid = "1.1.2"
simple-error = "0.2.3"
anyhow =  "1.0.58"
[dependencies.paho-mqtt]
#git = "https://github.com/Altaflux/paho.mqtt.rust.git"
version = "0.11.1"
features = ["bundled"]
default-features = false
